--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wahid-fortpolio</title>
+    <title>Wahid-fortpolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&family=Oswald&family=Poppins:ital,wght@0,600;0,800;0,900;1,600&family=Roboto+Mono&family=Source+Sans+Pro&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top">
+        <div class="pori">
+            <h1>wellcome to</h1>
+            <h1><span class="wahid">Abdul wahid</span> world</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.</p>
+            <a class="linkedin" target="-blank" href="https://www.linkedin.com/feed/?trk=404_page">hire me</a>
+        </div>
+        <div class="pori"><img src="my-bg.png"></div>
+    </section>
 </body>
+
 </html>
