--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
         </div>
         <div class="pori"><img src="my-bg.png"></div>
     </section>
+    <section class="dream-big2">
+        <div class="pori">
+            <img src="my-bg2.png" alt="" srcset="">
+        </div>
+        <div class="pori">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics</p>
+            <a class="linkedin" target="-blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
