--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 </head>
 
 <body>
-    <section class="top">
-        <div class="pori">
-            <h1>wellcome to</h1>
-            <h1><span class="wahid">Abdul wahid</span> world</h1>
+    <section class="top flexible-continar">
+        <div class="half-width">
+            <h1>Wellcome to <span class="wahid">md wahid </span>world</h1>
             <h3>Build Climber and Train Stopper</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
                 work.
@@ -28,18 +27,44 @@
                 Hero.</p>
             <a class="linkedin" target="-blank" href="https://www.linkedin.com/feed/?trk=404_page">hire me</a>
         </div>
-        <div class="pori"><img src="my-bg.png"></div>
+        <div class="half-width">
+            <img src="my-bg.png">
+        </div>
     </section>
-    <section class="dream-big2">
-        <div class="pori">
+    <section class="dream-big2 flexible-continar">
+        <div class="half-width">
             <img src="my-bg2.png" alt="" srcset="">
         </div>
-        <div class="pori">
+        <div class="half-width">
             <h1>Dream Big</h1>
             <h3>Become a web developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website. My goal is to build 3 websites and learn advanced topics</p>
             <a class="linkedin" target="-blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+    <section class="last">
+        <h1>Exprence</h1>
+        <div class="flexible-continar">
+            <div class="Exprences- last-second-pera">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="wahid">2024-Present | Pro Level Developer</h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div class="Exprences- last-pera">
+                <h2>Baby Web Developer</h2>
+                <h3 class="wahid">2022-2024 | Programming Hero Learner</h3>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
         </div>
     </section>
 </body>
