--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
